# image_resizer

./: Cargo.toml  README.md
src/: main.rs  resize_bulk_images.rs  resize_image.rs  weather.rs  web_crawler.rs
